Some fixes to amazon skin 1. Changed i to #a-page i - so now the Darkness dialog icons aren't inverted 2. Removed all z-index manipulation since it messes up with how Amazon's toolbar works during scroll

--- a/chrome-extension/themes/websites/amazon.scss
+++ b/chrome-extension/themes/websites/amazon.scss
@@ -8,12 +8,13 @@ $noColor: transparent;
 //----------------------------------------------------------------------------------------------------------------------------------------------------
 // General Elements Styling
 //----------------------------------------------------------------------------------------------------------------------------------------------------
-
+/*
+// z-index manipulation messes up with the look of Amazon's header when scrolling, so I disabled it
 .cropped-image-map, .image-map, .shogun-widget, .cropped-image-map-center-alignment{
   z-index: -100;
-}
+}*/
 
-header, #navFooter, i, .a-color-success, .acsux-hsb-container li, .acsux-menu, .acs-tiles-wrapfix{
+header, #navFooter, #a-page i, .a-color-success, .acsux-hsb-container li, .acsux-menu, .acs-tiles-wrapfix{
   @include invert-back()
 }
 
@@ -30,12 +31,3 @@ input[type="submit"]{
 #nav-subnav, #nav-iss-attach , #searchDropdownBox{
   background-color: $theme-background !important;
 }
-//----------------------------------------------------------------------------------------------------------------------------------------------------
-// 3rd Party Extensions Support
-//----------------------------------------------------------------------------------------------------------------------------------------------------
-div.drk_settings,
-div.drk_settings_icon,
-div.drk_dialog,
-.addthis_sharing_toolbox,
-.drk_invert_back {
-  -webkit-filter: invert(100%)  !important; }
